--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "apollo-server-core": "^3.6.6",
+    "apollo-server-express": "^3.6.6",
+    "express": "^4.17.3",
+    "graphql": "^16.3.0",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
