--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.5.10",
     "apollo-server-core": "^3.6.6",
     "apollo-server-express": "^3.6.6",
+    "axios": "^0.26.1",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
     "next": "12.1.1",
